# blog_updater

./: .gitignore  README.md  RUNBOOK.md  api.py  blogger_auth.py  config.env.example  drive_upload.py  requirements.txt
blog-agent/: README.md  docker-compose.yml  pom.xml
blog-agent/src/main/kotlin/com/blogagent/: BlogAgentApplication.kt
blog-agent/src/main/kotlin/com/blogagent/action/: DraftActions.kt  PublishActions.kt  ResearchActions.kt  ReviewActions.kt
blog-agent/src/main/kotlin/com/blogagent/agent/: BlogChatActions.kt  BlogWorkflowAgent.kt
blog-agent/src/main/kotlin/com/blogagent/config/: BlogAgentProperties.kt  WebSocketConfig.kt
blog-agent/src/main/kotlin/com/blogagent/controller/: BlogAgentController.kt
blog-agent/src/main/kotlin/com/blogagent/model/: BlogDraft.kt  BlogPost.kt  WorkflowState.kt
blog-agent/src/main/kotlin/com/blogagent/service/: BlogPythonAgentClient.kt  BloggerService.kt  RagDataManager.kt
blog-agent/src/main/resources/: application.yml
blog-agent/src/main/resources/prompts/: blog_agent_system.jinja
blog-agent/src/main/resources/prompts/persona/: default.jinja
blog-agent/src/test/kotlin/com/blogagent/: BlogWorkflowTest.kt  WorkflowStateTest.kt
blog-python-agent/: README.md  pyproject.toml  requirements.txt
blog-python-agent/agent/: __init__.py  __main__.py  cli.py  models.py  registry.py  server.py
blog-python-agent/agent/actions/: __init__.py  blog_actions.py
blog-python-agent/agent/types/: __init__.py
blog-python-agent/tests/: __init__.py  test_registry.py
docs/: cursor-blog-workflow.md  security-and-config.md
drafts/: template.md
scripts/: auth_blogger.py  auth_device_flow.py  post_from_draft.py  store_token.py
